20110606 (T.S.)
 - drvPadUdpComm.c: defined TS1_OR_4_TIME for post- base-3.14.9 (bundled
   generalTime) where we use epicsTimeEventBestTime (== -1). However, 
   this requires evrTimeGet():event/evrTime.c to be modified. Added a
   run-time check for this modification and fail driver initialization
   if the check doesn't pass.
20110606 (T.S.)
 - fidProcess.c, wavBuf.c, devWfRawSig.c: include <errlog.h> to silence
   compiler warnings under base-3.14.12

20110509 (T.S.)
 - RELEASE_NOTES: updated; cut R2-1-0
20110502 (T.S.)
 - src/drvPadAdcStream.c, src/drvPadAdcStream.h: unbundled driver
   pieces that suck data from the PAD ADC FIFO into a padStream
   from BPM and added to 'udpComm'. This is quick-and-dirty
   (should probably be its own module and more complete, i.e,
   contain ISR etc. also).
20110502 (T.S.)
 - src/drvPadUdpComm.c, src/drvPadUdpComm.h, src/hostStream.c,
   src/padStream.c, src/padProto.h, src/padProtoHost.c,
   src/padStreamTestClntMain.c:
   Added now 'channels' byte to stream command request.
   Use remaining flags and CM to convey channel number in single-channel
   mode reply. CM is no longer directly tested by user but he/she must now 
   use PADRPLY_STRM_IS_CM() macro. C1 is no longer directly set by user
   but managed internally, based on the channel bit mask in the 
   stream-start command.
 - src/padProto.c: fixed propagation of PAD errno to padRequest return
   value (error # < 0).
20110427 (T.S.)
 - first stab at supporting fragmented streams. This is still untested
   and is 'hackish' since it was done very quickly and could not be
   designed from scratch (bwds compatibility).
20110425 (T.S.)
 - src/hostStream.c, src/padProto.h, src/padStream.c: removed implicit
   4-channel assumption (NCHANS).
   Replaced by run-time detection of channel number via C1 flag.
 - src/padProtoHost.c: added new -1 flag to request single-channel data.
   Handle single-channel data when dumping stream.